--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,5 +36,9 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.1.3"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 16.2.9.",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
