--- a/Pipelines/Messaging/Jenkinsfile
+++ b/Pipelines/Messaging/Jenkinsfile
@@ -11,10 +11,9 @@ pipeline {
         stage('CI') {
             steps {
                sh "echo ${DOCKERHUB_CREDENTIALS_PSW} | docker login -u ahmeddalii --password-stdin"
-               sh "cd Pipelines/Messaging"
                sh "pwd"
                sh "ls"
-               sh "docker build -f Dockerfile -t ahmeddalii/clinic-messaging-mq:3.0 ."
+               sh "docker build -f Pipelines/Messaging/Dockerfile -t ahmeddalii/clinic-messaging-mq:3.0 ."
                sh "docker push ahmeddalii/clinic-messaging-mq:3.0"
             }
         }
