--- a/Pipelines/Messaging/Jenkinsfile
+++ b/Pipelines/Messaging/Jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
                sh "echo ${DOCKERHUB_CREDENTIALS_PSW} | docker login -u ahmeddalii --password-stdin"
                sh "pwd"
                sh "ls"
-               sh "docker build -f Dockerfile -t ahmeddalii/clinic-messaging-mq:3.0 ."
+               sh "docker build -f Pipelines/Messaging/Dockerfile -t ahmeddalii/clinic-messaging-mq:3.0 ."
                sh "docker push ahmeddalii/clinic-messaging-mq:3.0"
             }
         }
