--- a/Pipelines/Messaging/Jenkinsfile
+++ b/Pipelines/Messaging/Jenkinsfile
@@ -21,7 +21,7 @@ pipeline {
         stage('CD') {
             steps {
                sh "echo ${DOCKERHUB_CREDENTIALS_PSW} | docker login -u ahmeddalii --password-stdin"
-               sh "docker run -d --name clinic-messaging-mq -p 5672:5672 -v rabbitmq-vol:/var/lib/rabbitmq ahmeddalii/clinic-messaging-mq:3.0"
+               sh "docker run -d --name clinic-rabbit-mq -p 5672:5672 -v rabbitmq-vol:/var/lib/rabbitmq ahmeddalii/clinic-messaging-mq:3.0"
             }
         }
     }  
